The Samba-Bugzilla – Bug 10860
registry is locked after failed RPC registry update
Last modified: 2014-10-13 19:14:20 UTC
If a SMB client is trying to submit a CREATEKEY request via RPC and the request fails due to ACCESS_DENIED, the registry is locked afterwards and any further registry updates are blocked. To unlock the registry again the client connection must be closed. A fix is already available in master: 4237138 vl@samba.org registry: Don't leave dangling transactions Note: this defect exists in all Samba releases
Created attachment 10333 [details] Patch for 3.6 - 4.2 Applies cleanly to 3.6 up to 4.2
Karo, please push to all releases :-) Thanks, Volker
Pushed to autobuild-v4[0|1|2]-test.
Pushed to all three branches. Closing out bug report. Thanks!